--- a/case_1/Case_1_Heart_Disease.ipynb
+++ b/case_1/Case_1_Heart_Disease.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4  41.0  0.0  2.0  130.0  204.0  0.0  2.0  172.0  0.0  1.4  1.0  0.0  3.0   0"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -280,7 +280,6 @@
     "data_list = ['age', 'sex', 'cp','trestbps', 'chol', 'fbs','restecg',\n",
     "             'thalac','exang','oldpeak','slope','ca','thal']\n",
     "data = dataframe[data_list]\n",
-    "\n",
     "# Normalize data\n",
     "data_min = data.min()\n",
     "data_max = data.max()\n",
@@ -647,7 +646,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Secound Solution </h2>"
+    "<h3>Conclusion for our first solution</h3>\n",
+    "<br>\n",
+    "   <p> In the first solution we fetched the cleveland heart disease data and converted the classified data to binary data. So basically insted of rating heart diseases from 0 to 4 we rate it 0 as healthy and [1 to 4] as sick.\n",
+    "    \n",
+    "Insted of trying different epochs and batch sizes we created pickBestModel method which will pick from x*y models the \"best one\". This model is compared in evaluateModels method. When the best model (in this case which has the lowest loss) will be picked and from that model we will draw a graph.\n",
+    "\n",
+    "For future development it would be good idea to get information about the amount of epochs and batch size that has been used to create the neural network also some logic would be good to add in evaluateModels method.</p>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Second Solution </h2>"
    ]
   },
   {
@@ -801,6 +814,15 @@
     "print()\n",
     "print('Train score:', results['train_score'])\n",
     "print(\"Average (std): %.2f%% (%.2f%%)\" % (results['train_score'].mean()*100, results['train_score'].std()*100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Conclusion for our second solution</h3>\n",
+    "<br>\n",
+    "   <p> In this solution we tried out a new validation method named cross validation where we divide the data to x amount of pieces and then validate them piece by piece. Eventually we get the end result which is list of scores where we get the mean value.</p>"
    ]
   }
  ],
